# unnamed-sdvx-clone

./: .gitattributes  .gitignore  CMakeLists.txt  FX.sln  GenerateWin64ProjectFiles.bat  LICENSE.md  README.md  RestorePackages.bat  Test.txt  build.linux
Audio/: CMakeLists.txt
Audio/include/Audio/: Audio.hpp  AudioBase.hpp  AudioOutput.hpp  Audio_Impl.hpp  DSP.hpp  Sample.hpp
Audio/src/: Audio.cpp  AudioBase.cpp  AudioOutput_SDL.cpp  AudioStreamBase.cpp  AudioStream_mp3.cpp  AudioStream_ogg.cpp  DSP.cpp  Sample.cpp  minimp3.h  stdafx.h
Audio/src/Windows/: AudioOutput_WASAPI.cpp
Audio/src/minimp3/: minimp3.c
Beatmap/: CMakeLists.txt
Beatmap/include/Beatmap/: AudioEffects.hpp  Beatmap.hpp  BeatmapObjects.hpp  BeatmapPlayback.hpp  Database.hpp  KShootMap.hpp  MapDatabase.hpp
Beatmap/src/: AudioEffects.cpp  Beatmap.cpp  BeatmapFromKSH.cpp  BeatmapObjects.cpp  BeatmapPlayback.cpp  KShootMap.cpp  MapDatabase.cpp  stdafx.h
Data/: CMakeLists.txt  Data.natvis
Data/include/Data/: ClassSerializer.hpp  CollectionSerializer.hpp  PropertyHierarchy.hpp  Serializer.hpp  VirtualCollectionSerializer.hpp  Yaml.hpp  YamlMapping.hpp  YamlSequence.hpp  YamlStream.hpp
Data/src/: ClassSerializer.cpp  DefaultSerializers.cpp  PropertyHierarchy.cpp  Serializer.cpp  Yaml.cpp  YamlMapping.cpp  YamlSequence.cpp  YamlStream.cpp  stdafx.h
GUI/: CMakeLists.txt
GUI/include/GUI/: Anchor.hpp  Button.hpp  ButtonBase.hpp  Canvas.hpp  CommonGUIStyle.hpp  ContainerBase.hpp  Focusable.hpp  GUI.hpp  GUIAnimation.hpp  GUIElement.hpp  GUIEvents.hpp  GUIRenderData.hpp  GUIRenderer.hpp  GUISlotBase.hpp  GUITextInput.hpp  GUIUpdateData.hpp  Label.hpp  LayoutBox.hpp  Panel.hpp  ScrollBox.hpp  SettingsBar.hpp  Slider.hpp  Spinner.hpp  TextInputField.hpp
GUI/src/: Anchor.cpp  Button.cpp  ButtonBase.cpp  Canvas.cpp  CommonGUIStyle.cpp  ContainerBase.cpp  GUI.cpp  GUIAnimation.cpp  GUIElement.cpp  GUIEvents.cpp  GUIRenderData.cpp  GUIRenderer.cpp  GUISlotBase.cpp  Label.cpp  LayoutBox.cpp  Panel.cpp  ScrollBox.cpp  SettingsBar.cpp  Slider.cpp  Spinner.cpp  TextInputField.cpp  stdafx.h
Graphics/: CMakeLists.txt  CustomWindowStyle.cpp  Graphics.vcxproj  Graphics.vcxproj.filters  Mesh.cpp  ParticleSystem.cpp  ResourceManager.cpp  Shader.cpp  SpriteMap.cpp  Window.cpp  Window_Internal.cpp  packages.config
Graphics/include/Graphics/: CustomWindowStyle.hpp  Font.hpp  Framebuffer.hpp  GL.hpp  Gamepad.hpp  Graphics.hpp  Image.hpp  ImageLoader.hpp  Keys.hpp  Material.hpp  Mesh.hpp  MeshGenerators.hpp  OpenGL.hpp  ParticleEmitter.hpp  ParticleParameter.hpp  ParticleParameters.hpp  (+12 more)
Graphics/src/: CustomWindowStyle.cpp  Font.cpp  Framebuffer.cpp  Gamepad_Impl.cpp  Gamepad_Impl.hpp  Image.cpp  ImageLoader.cpp  KeyMap.hpp  Material.cpp  Mesh.cpp  MeshGenerators.cpp  OpenGL.cpp  ParticleSystem.cpp  RenderItem.cpp  RenderPass.cpp  RenderQueue.cpp  ResourceManagers.cpp  Shader.cpp  SpriteMap.cpp  Texture.cpp  VertexFormat.cpp  Window.cpp  Window_Internal.hpp  Window_Linux.cpp  Window_Windows.cpp  stdafx.h
Main/: Application.cpp  Application.hpp  ApplicationTickable.cpp  ApplicationTickable.hpp  AsyncAssetLoader.cpp  AsyncAssetLoader.hpp  AsyncLoadable.hpp  Audio.cpp  AudioEffects.hpp  AudioPlayback.cpp  AudioPlayback.hpp  Background.cpp  Background.hpp  Beatmap.cpp  Beatmap.hpp  BeatmapFromKSH.cpp  BeatmapObjects.hpp  BeatmapPlayback.cpp  BeatmapPlayback.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Database.cpp  Database.hpp  Font.cpp  Framebuffer.cpp  Game.cpp  Game.hpp  Game1.cpp  GameConfig.cpp  GameConfig.hpp  HitStat.cpp  HitStat.hpp  Image.hpp  ImageLoader.cpp  Input.cpp  Input.hpp  KShootMap.cpp  KShootMap.hpp  LaserTrackBuilder.cpp  (+41 more)
Main/Audio/: Audio.cpp  Audio.hpp  AudioBase.cpp  AudioBase.hpp  AudioEffects.cpp  AudioEffects.hpp  AudioOutput.cpp  AudioOutput.hpp  AudioOutput_SDL.cpp  AudioPlayback.cpp  AudioPlayback.hpp  AudioStream.cpp  AudioStream.hpp  AudioStreamBase.cpp  AudioStreamBase.hpp  AudioStream_mp3.cpp  Audio_Impl.hpp  DSP.cpp  DSP.hpp  GameAudioEffects.cpp  Output.cpp  Output.hpp  Sample.cpp  Sample.hpp  minimp3.c
Main/GUI/: Box.cpp  Canvas.cpp  Canvas.hpp  CommonGUIStyle.cpp  CommonGUIStyle.hpp  GUI.cpp  GUI.hpp  GUIAnimation.hpp  GUIElement.cpp  GUIElement.hpp  GUIRenderData.hpp  GUIRenderer.cpp  GUIRenderer.hpp  HealthGauge.cpp  HealthGauge.hpp  Label.cpp  Label.hpp  LayoutBox.cpp  LayoutBox.hpp  Panel.cpp  Panel.hpp  PerformanceGraph.cpp  PerformanceGraph.hpp  ScrollBox.cpp  SettingsBar.cpp  SettingsBar.hpp  SongSelectItem.cpp  SongSelectItem.hpp  SongSelectStyle.cpp  SongSelectStyle.hpp  TextInputField.cpp  TextInputField.hpp
Main/Graphics/: Font.cpp  Font.hpp  Framebuffer.hpp  Image.cpp  Material.cpp  Material.hpp  MeshGenerators.cpp  OpenGL.cpp  OpenGL.hpp  ParticleEmitter.hpp  ParticleParameter.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderQueue.hpp  ResourceManager.hpp  ResourceTypes.hpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexFormat.hpp  Window.cpp  Window.hpp
Shared/: Bezier.cpp  BinaryStream.cpp  Buffer.cpp  CMakeLists.txt  Color.cpp  File.cpp  FileStream.cpp  Log.cpp  Math.cpp  MemoryStream.cpp  Path.cpp  Random.cpp  Shared.natvis  Shared.vcxproj  Shared.vcxproj.filters  String.cpp  Transform.cpp  VectorMath.cpp  stdafx.cpp  stdafx.h
Shared/src/: Bezier.cpp  BinaryStream.cpp  Buffer.cpp  Color.cpp  Config.cpp  ConfigEntry.cpp  File.cpp  Handle.cpp  Interpolation.cpp  Jobs.cpp  Log.cpp  Math.cpp  MemoryStream.cpp  Path.cpp  PropertyHierarchy.cpp  Random.cpp  ResourceManager.cpp  String.cpp  TextStream.cpp  Transform.cpp  Transform2D.cpp  UTF8.cpp  Variant.cpp  stdafx.h
Tests/: CMakeLists.txt
Tests.Game/: CMakeLists.txt  GraphicsBase.cpp  GraphicsBase.hpp  Main.cpp  TestAudio.cpp  TestBeatmap.cpp  TestGUI.cpp  TestGraphics.cpp  TestMusicPlayer.cpp  TestMusicPlayer.hpp  stdafx.h
Tests.Graphics/: CMakeLists.txt
Tests.Shared/: CMakeLists.txt  Main.cpp  TestCaching.cpp  TestCallbacks.cpp  TestData.cpp  TestEnum.cpp  TestFilesystem.cpp  TestPropertyHierarchy.cpp  TestRef.cpp  Tests.cpp  packages.config  stdafx.h
Tests/src/: TestManager.cpp  Tests.cpp  stdafx.h
(+114 files in other folders)
